# Asteroids

./: CMakeLists.txt
Assets/Shaders/: BasicVertexShader.vert  CoordWrappingShader.geom  DuplicationGeometryShader.geom  ExplosionGeometryShader.geom  VertexShaderExample.vert
Include/Core/: Application.h  GameObject.h  GeometryGenerator.h  LevelBase.h
Include/Core/Math/: MathHelpers.h
Include/Core/Physics/: CircleCollider2D.h  Collider2D.h
Include/Game/: Asteroid.h  AsteroidsCircleCollider2D.h  AsteroidsGameObject.h  AsteroidsSpawner.h  AsteroidsUI.h  Bullet.h  LevelMain.h  PlayerSpaceShip.h
Source/: main.cpp
Source/Core/: Application.cpp  GameObject.cpp  GeometryGenerator.cpp  LevelBase.cpp
Source/Core/Math/: MathHelpers.cpp
Source/Core/Physics/: CircleCollider2D.cpp  Collider2D.cpp
Source/Game/: Asteroid.cpp  AsteroidsGameObject.cpp  AsteroidsSpawner.cpp  AsteroidsUI.cpp  Bullet.cpp  LevelMain.cpp  PlayerSpaceShip.cpp
